--- a/attendance.html
+++ b/attendance.html
@@ -97,9 +97,9 @@ width: 190px;
                              tabs
                             '</tbody>' +
                             '</table>';
-                    document.getElementById("download").innerHTML = '<a href="./csv/' +
+                    document.getElementById("download").innerHTML = '<a href="./excel/' +
                         fname +
-                        '.csv" download>' +
+                        '.xlsx" download>' +
                         '<button type="button" ' +
                         'class="btn btn-outline-light">Download</button></a>'
                 })
